--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="src\Shader.h" />
     <ClInclude Include="src\DebugUtils.h" />
     <ClInclude Include="src\IndexBuffer.h" />
+    <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\vendor\stb_image.h" />
     <ClInclude Include="src\VertexBuffer.h" />
     <ClInclude Include="src\VertexArray.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="src\DebugUtils.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\vendor\stb_image.cpp" />
     <ClCompile Include="src\VertexBuffer.cpp" />
     <ClCompile Include="src\VertexArray.cpp" />
